chore: make minimum reproducable
