# apps/library/src/books/book.entity.ts
@@ -1,29 +1,0 @@
-import { Borrowing } from '../borrowing/borrowing.entity';
-import {
-  Column,
-  Entity,
-  OneToMany,
-  PrimaryGeneratedColumn,
-  Relation,
-} from 'typeorm';
-
-@Entity()
-export class Book {
-  @PrimaryGeneratedColumn()
-  id: number;
-
-  @Column({ unique: true })
-  title: string;
-
-  @Column()
-  author: string;
-
-  @Column()
-  isbn: string;
-
-  @Column({ type: 'int' })
-  amount: number;
-
-  @OneToMany(() => Borrowing, (borrowing) => borrowing.book)
-  borrowings?: Relation<Borrowing>[];
-}
