# apps/library/src/books/dto/create-book.dto.ts
@@ -1,20 +1,0 @@
-import { IsInt, IsNotEmpty, IsString, IsPositive, Max } from 'class-validator';
-
-export class CreateBookDto {
-  @IsString()
-  @IsNotEmpty()
-  title: string;
-
-  @IsString()
-  @IsNotEmpty()
-  author: string;
-
-  @IsString()
-  @IsNotEmpty()
-  isbn: string;
-
-  @IsPositive()
-  @IsInt()
-  @Max(100)
-  amount: number;
-}
