# apps/library/src/books/dto/update-book.dto.ts
@@ -1,9 +1,0 @@
-import { IsInt, IsPositive } from 'class-validator';
-import { CreateBookDto } from './create-book.dto';
-import { PartialType } from '@nestjs/mapped-types';
-
-export class UpdateBookDto extends PartialType(CreateBookDto) {
-  @IsPositive()
-  @IsInt()
-  id: number;
-}
