# apps/library/src/borrowing/dto/borrow-book.dto.ts
@@ -1,7 +1,0 @@
-import { IsInt, IsPositive } from 'class-validator';
-
-export class BorrowBookDto {
-  @IsInt()
-  @IsPositive()
-  bookId: number;
-}
