# apps/library/src/borrowing/dto/return-book.dto.ts
@@ -1,3 +1,0 @@
-import { BorrowBookDto } from './borrow-book.dto';
-
-export class ReturnBookDto extends BorrowBookDto {}
